--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,6 +10,7 @@
 </head>
   <body>
     <header>
+        
     <div class="high-panel">
         <div class="container">
         <div class="logotype">
@@ -52,7 +53,12 @@
                 <div class="slider__row">
                 <div class="slider__text text"><p>AppKit also comes with an Angular JS version. It empowers developers to create UI components with very little code. Feeding data into AppKit directives is quick and easy.</p>
             <div class="slider__btn"><p><a href="">Find Out More</a></p></div></div>     
-            
+            <div class="slider__img">
+            <img src="../Image/Other/imac.png" height="450px" alt="">
+            <!-- <img src="../Image/Other/Billy.png" height="300px" alt=""> -->
+            <!-- <source srcset="../Image/Other/Macbook.png" type="image/jpeg" media="(max-width:1155px)">
+            <source srcset="../Image/Other/Billy.png" type="image/jpeg" media="(max-width:1155px)"> -->
+        </div>
         </div>
         <div class="slider__minibuttons">
                 <a href=""></a>
@@ -114,7 +120,7 @@
                                                        <p>@JohnK, San Francisco</p></div>
                         </div>
                     </div>
-                    <div class="reviews__column"> 
+                    <div class="reviews__column reverse"> 
                         <div class="reviews__review">
                             <div class="review__body"></div>
                             <div class="review__cloud right up"><p>Testimonial goes here fermentum sed pharetra in, aliquet sodales quam. Ut sed turpis quis orci viverra aliquet interdum ut ipsum.</p>
@@ -124,7 +130,7 @@
                             <img src="../Image/Icons/profile-2.png" height="80px">
                         </div>
                     </div>
-                     <div class="reviews__column">
+                     <div class="reviews__column ">
                         <div class="reviews__icon">
                             <img src="../Image/Icons/profile-3.png" height="80px">
                         </div>
@@ -134,7 +140,7 @@
                                                        <p>@MattH, Berlin</p></div>
                         </div>
                     </div>
-                    <div class="reviews__column">   
+                    <div class="reviews__column reverse">   
                         <div class="reviews__review">
                             <div class="review__body"></div>
                             <div class="review__cloud right"><p>Testimonial goes here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.</p>
